--- a/template/vercel.json
+++ b/template/vercel.json
@@ -1,15 +1,16 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@now/node"
-    }
+      {
+          "src": "dist/index.js",
+          "use": "@vercel/node",
+          "config": { "includeFiles": ["dist/**"] }
+      }
   ],
   "routes": [
-    {
-      "src": "/dist",
-      "dest": "index.js"
-    }
+      {
+          "src": "/(.*)",
+          "dest": "dist/index.js"
+      }
   ]
 }
