--- a/template/package.json
+++ b/template/package.json
@@ -1,11 +1,11 @@
 {
-	"name": "express-typescript-vercel-part2",
+	"name": "create-svete-app",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
 	"scripts": {
 		"start": "nodemon src/index.ts",
-		"build": "npx tsc",
+		"build": "rimraf dist && tsc",
 		"ts.check": "tsc --project tsconfig.json",
 		"add-build": "git add dist",
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -23,7 +23,6 @@
 		"@types/node": "^18.11.9",
 		"nodemon": "^2.0.20",
 		"pre-commit": "^1.2.2",
-		"rimraf": "^4.1.2",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.8.4"
 	},
