--- a/template/package.json
+++ b/template/package.json
@@ -1,32 +1,32 @@
 {
-	"name": "create-svete-app",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"start": "nodemon src/index.ts",
-		"build": "rimraf dist && tsc",
-		"ts.check": "tsc --project tsconfig.json",
-		"add-build": "git add dist",
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"pre-commit": [
-		"ts.check",
-		"build",
-		"add-build"
-	],
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@types/express": "^4.17.14",
-		"@types/node": "^18.11.9",
-		"nodemon": "^2.0.20",
-		"pre-commit": "^1.2.2",
-		"ts-node": "^10.9.1",
-		"typescript": "^4.8.4"
-	},
-	"dependencies": {
-		"express": "^4.18.2"
-	}
+  "name": "create-svete-app",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon src/index.ts",
+    "build": "rimraf dist && tsc && npx tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.11.9",
+    "nodemon": "^2.0.20",
+    "pre-commit": "^1.2.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
